Nineteen68#954 Fix: Scenario 1 : 1) Currently Cancel button is displayed for updated object properties - Fixed.Scenario 2: If object is not found in AUT - Issue still exists, we are not showing cancel button here. This needs Fix.Scenario 3: IF no updated are available for the object in AUT - Issue still exists, we are not showing cancel button here. This needs Fix.Scenario 4 : we need to block the access to all other UI components when compare & update feature is used by user

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1064,7 +1064,7 @@ input[disabled]{
 {
     float: left;
     width: 80%;
-    /* margin-top: 2%; */
+    margin-top: 2%; 
 }
 .compareObjHeading
 {
@@ -5223,4 +5223,9 @@ Weboccular report css
 .reassignTaskBtn
 {
     margin-right: 5px;
+}
+.disableFilter
+{
+    cursor: no-drop !important;
+    pointer-events: none;
 }
